--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,198 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* Whole Page */
+
+#container {
+	width:1000px;
+	margin:auto;
+}
+
+/*  Title */
+#index-header {
+	font-size:70px;
+	margin-bottom:20px;
+}
+
+header {
+	margin-bottom:20px;
+}
+
+/* Navbar */ 
+nav {
+	display:flex;
+	justify-content:space-between;
+	background-color:rosybrown;
+	align-items:center;
+}
+
+#links {
+    display:flex;
+    width:70%;
+    justify-content:space-between;
+    margin: 0px 10px;
+}
+/* Links and Image  */
+nav * {
+	text-decoration:none;
+	color:lightgray;
+	font-size:14px;
+}
+
+/* Animations for Nav bar */
+.animate {
+	animation: rotate .3s linear infinite alternate;
+}
+
+@keyframes rotate {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(10deg);
+    }
+}
+
+/* Contains title, button, and image */
+#header-title {
+	display:flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+/* Title + Button */
+#title { 
+	text-align:center;
+}
+
+#start-button {
+	color:black;
+	text-decoration: none;
+	text-align:center;
+	border: 2px solid black;
+	padding:10px;
+	transition:.2s;
+}
+/* change color of starting button */
+#start-button:hover {
+	background-color:black;
+	color:white;
+}
+
+/* Main section */
+.main { 
+	display:flex;
+	flex-wrap:wrap;
+	margin: 2% 0%;
+	border-top: 1px solid gray;
+	border-bottom: 1px solid gray;
+}
+
+/* Top half of info */
+.info {
+	width: 47%;
+	margin: 2% 2% 2% 0%;
+}
+
+/* Bottom half of info */
+.info-2 {
+	width:30%;
+	margin: 2% 2% 2% 0%;
+}
+/* Most bottom picture */
+section img {
+	width:100%;
+}
+
+/* Contact info spacing */
+address {
+	line-height:1;
+}
+
+/* Copyright */
+footer p {
+	margin:50px;
+	text-align:center;
+}
+
+/* Mobile */
+@media only screen and (max-width:500px) {
+    #container {
+        width:100%;
+    }
+    header nav {
+        flex-direction:column-reverse;
+
+    }
+    #links {
+        flex-direction:column;
+    }
+}
