--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,7 @@ footer p {
         align-items:center;
         text-align:center;
         margin: 20px 0;
+        width:100%;
     }
 
     #links a {
@@ -223,6 +224,11 @@ footer p {
     .main > * {
         width:100%;
         margin: 20px 0;
+    }
+
+    footer {
+        width: 90%;
+        margin: 30px auto 0 auto;
     }
 
 }
