--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,52 @@ footer p {
 	margin:50px;
 	text-align:center;
 }
+/* Tablet */
+@media only screen and (max-width:800px) {
+    #container {
+        width:100%;
+    }
+
+    header {
+        width:100%;
+        margin-bottom: 80px;
+    }
+    #links {
+        margin: 0px 20px;
+        width: 90%;
+    }
+    #links a {
+        color:lightslategray;
+    }
+
+    #header-img-div {
+        margin-bottom: 30px;
+    }
+    header nav {
+        flex-direction:column-reverse;
+        margin: 20px 0 60px 0;
+    }
+
+    #header-title img {
+        display:none;
+    }
+
+    #start-button {
+        padding: 5px 50px;
+        margin-top:30px;
+    }
+
+    .main {
+        width: 95%;
+        margin:auto;
+        padding: 20px 0;
+    }
+
+    footer {
+        width: 90%;
+        margin: 30px auto 0 auto;
+    }
+}
 
 /* Mobile */
 @media only screen and (max-width:500px) {
@@ -190,14 +236,15 @@ footer p {
         padding: 20px;
         border-bottom: 1px solid dimgray;
         width: 100%;
-        color: lightslategray;
     }
     #links a:nth-child(1) {
         border-top: 1px solid dimgray;
     }
 
-    header img {
-        width:50%;
+    #header-img-div {
+        width:100%;
+        text-align:center;
+        margin-bottom:0px;
     }
 
     #header-title {
@@ -206,13 +253,6 @@ footer p {
         margin-top: 40px;
     }
 
-    #start-button {
-        padding: 5px 50px;
-        margin-top:30px;
-    }
-    #header-title img{
-        display:none;
-    }
     .main {
         flex-direction:column;
         width:90%;
@@ -226,9 +266,5 @@ footer p {
         margin: 20px 0;
     }
 
-    footer {
-        width: 90%;
-        margin: 30px auto 0 auto;
-    }
-
 }
+
